<resources>
    <string name="app_name">Sudoku</string>
    <string name="drawer_playgame">Play</string>
    <string name="drawer_highscores">Highscores</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open the menu</string>
    <string name="navigation_drawer_close">Close the menu</string>
    <string name="game_paused">A game is paused</string>
    <string name="game_paused_message">You haven\'t finished your last game. You can either continue or start a new game.</string>
    <string name="continue_game">Continue the game</string>
    <string name="delete_game">Delete current game and start a new one</string>
    <string name="select_var_tile">You must select a variable tile first.</string>
    <string name="fixed_tile">You can\'t select this tile. It is fixed.</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start_game">Start game</string>
    <string name="choose_difficulty">Choose difficulty</string>
    <string name="your_name">Your name</string>
    <string name="congratulations">Congratulations</string>
    <string name="highscore_input_description">You have successfully solved this sudoku. Please enter your name below and your result will be saved. If you don\'t want it to be saved, hit cancel.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="must_fill">This must be filled.</string>
    <string name="save_successful">Your result has been successfully saved.</string>
    <string name="difficulty">Difficulty: %1$s</string>
    <string name="time">Time: %1$d:%2$d</string>
    <string name="delete_this_game">Delete this game</string>
    <string name="clear_the_board">Clear the board</string>
    <string name="show_collisions">Show collisions</string>
    <string name="sure">Are you sure?</string>
    <string name="sure_delete_game">Are you sure want to delete this game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure_clear_fields">Are your sure want to clear all the variable fields of the board?</string>
    <string name="set_application_theme">Set application theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="delete_highscores">Delete highscores</string>
    <string name="sure_delete_highscores">Are you sure want to delet all the data from the highscores? This can\'t be undone.</string>
    <string name="highscores_deleted">Highscores successfully deleted.</string>
    <string name="btn_delete_descrip">You can delete this game by pressing this button.</string>
    <string name="got_it">GOT IT</string>
    <string name="btn_clear_descrip">You can clear all the filled numbers by pressing this button.</string>
    <string name="btn_showcolls_descrip">You can highlight the conflicting fields by pressing this button.</string>
    <string name="board_descrip">Choose an empty field and press a button with a number to fill it. You can modify the fields that are not fixed.</string>
    <string name="btndel_descrip">You can delete the content of the currently selected tile with this button.</string>
    <string name="apply">Apply</string>
</resources>
